[gd_scene load_steps=2 format=3 uid="uid://cbhrp0pvdkdpg"]

[ext_resource type="Script" uid="uid://d18wey3afw3yc" path="res://UI/DialogueBox/dialogue_box.gd" id="1_dialogue_box"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -140.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_dialogue_box")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 0.95)

[node name="Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.8, 0.8, 0.9, 1)

[node name="InnerBackground" type="ColorRect" parent="Border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.08, 0.08, 0.15, 1)

[node name="ContentMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CharacterName" type="Label" parent="ContentMargin/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "Character"

[node name="DialogueText" type="RichTextLabel" parent="ContentMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "This is sample dialogue text that will appear here."
fit_content = true
scroll_active = false

[node name="ContinueIndicator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "â–¼"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypewriterTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[connection signal="timeout" from="TypewriterTimer" to="." method="_on_typewriter_timer_timeout"]
